--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,4 +122,5 @@ dependencies {
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
     implementation 'com.karumi:dexter:6.1.2'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
 }
